--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,8 +27,22 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div class="hero-head">
+      <nav class="navbar">
+        <div class="container">
+          <div class="navbar-brand">
+            <a class="navbar-item"><img src="https://i.imgur.com/eDgYGWh.png" /></a>
+          </div>
+          <div class="navbar-menu">
+            <div class="navbar-start">
+              <a class="navbar-item">Equipo Grande</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
     <div class="container">
-      <div id="root">
+      <div id="root" class="fader">
       </div>
     </div>
     
